# digit_api

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  install_script.sh  pyproject.toml
env/: pyvenv.cfg
include/artl/: BUILD.bazel
lowlevelapi/: .bazelrc  Makefile  WORKSPACE  environ.bzl  lowlevelapi.c  lowlevelapi_py.cc  requirements.txt
lowlevelapi/include/: BUILD.bazel
lowlevelapi/include/artl/: BUILD.bazel
lowlevelapi/libartl/: Makefile
lowlevelapi/src/: BUILD.bazel  digit_api_test.py  digitapi_py.cc  drake_example.py  lowlevelapi_example.c  main.py  old_Makefile
src/: BUILD.bazel  digitapi_py.cc  lowlevelapi.c
