[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Digit_API"
version = "0.0.1"
authors = [{name="Jacob Hackett", email="jeh15@fsu.edu" }]
description = "Low level API for Digit"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
my-client = "Digit_API:install_script"

[project.urls]
"Homepage" = "https://github.com/your_name_here/something"
"Bug Tracker" = "https://github.com/your_name_here/something/issues"