package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "libartl.so",
    srcs = [
        "artl.c",
        "artl_internal.c",
        "crc32.c",
    ],
    hdrs = [
        "artl.h",
        "artl_internal.h",
        "crc32.h",
    ],
    deps = [
        "@zstd//:libzstd",
    ],
    copts = [
        "-O2",
        "-Wall",
        "-Wextra",
        "-fPIC",
    ],
)