package(default_visibility = ["//visibility:public"])

# Rules:
load("@rules_python//python:defs.bzl", "py_binary")
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension", "pybind_library")

# Custom pip requirements:
load("@my_deps//:requirements.bzl", "requirement")


cc_library(
    name = "lowlevelapi",
    srcs = ["lowlevelapi.c"],
    hdrs = ["lowlevelapi.h"],
    deps = [
        "//include/artl:artl",
        "@zstd//:libzstd",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "lowlevelapi_example",
    srcs = ["lowlevelapi_example.c"],
    deps = [":lowlevelapi"],
    visibility = ["//visibility:public"],
)

# Compile C++ code into a shared library.
pybind_library(
    name = "example_cc_library",
    srcs = ["example.cc"],
    alwayslink = True,
    visibility = ["//visibility:public"],
)

# Create a Python extension module from the C++ library.
pybind_extension(
    name = "example",
    deps = [":example_cc_library"],
    visibility = ["//visibility:public"],
)

# Create a Python library from shared file:
py_library(
    name = "example_py_library",
    data = [":example.so"],
    imports = ["."],
    visibility = ["//visibility:public"],
)

# Create a Python binary that uses the py_library:
py_binary(
    name = "main",
    srcs = ["main.py"],
    deps = [":example_py_library"],
    visibility = ["//visibility:public"],
)

# Eigen Example:
cc_binary(
    name = "eigen_example",
    srcs = ["eigen_example.cc"],
    deps = [
        "@eigen//:eigen",
    ],
    visibility = ["//visibility:public"],
)

# Digits API:
pybind_library(
    name = "digitapi_cc_library",
    srcs = ["digitapi_py.cc"],
    deps = [
        ":lowlevelapi",
        "//include/artl:artl",
        "@zstd//:libzstd",
        "@eigen//:eigen",
    ],
    alwayslink = True,
    visibility = ["//visibility:public"],
)

pybind_extension(
    name = "digit_api",
    deps = [":digitapi_cc_library"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "digitapi_py_library",
    data = [":digit_api.so"],
    imports = ["."],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "digit_api_test",
    srcs = ["digit_api_test.py"],
    deps = [
        ":digitapi_py_library",
        requirement("numpy"),
    ],
    visibility = ["//visibility:public"],
)